opam-version: "2.0"
maintainer: "bruno@brunoflores.com.br"
version: "dev"

homepage: "https://compiler.team"
dev-repo: "git+https://github.com/brunoflores/cpdt.git"
bug-reports: "https://github.com/brunoflores/cpdt/issues"
license: "Apache-2.0"

synopsis: "Book"
description: """
Book.
"""

build: [
  ["sh" "-c" "coq_makefile -f _CoqProject -o Makefile"]
  [make "-j%{jobs}%"]
]

install: [make "install"]

run-test: [make "test"]

depends: [
  "ocaml" {>= "4.05.0"}
  "coq" {(>= "8.13") | (= "dev")}
]

tags: []

authors: [
  "Bruno Flores"
]
